--- a/_posts/2020-06-14-test-post.md
+++ b/_posts/2020-06-14-test-post.md
@@ -1,9 +1,10 @@
 ---
 layout: post
-title: Minecraft Server
-image-path: /assets/images/mineserver.png
+title: CTF Team Test
+image-path: /assets/images/ctf_big.png
+href: https://et3rnos.github.io/other/ducks0ci3ty-ctf-team-test.html
 excerpt: |
-    Enter our Minecraft Server with reserved slots and with just 1 rule. We allow cracked players to join!
+    Solve this easy test composed by 5 challenges to gain a place in our CTF Team!
 ---
 ### \[1\] Crypto Challenge
 
